# MentorPi

./: .gitignore  CLAUDE.md
src/autonomous_explorer/: README.md  architecture.md  instructions.md  launch_test.sh  package.xml  setup.cfg  setup.py
src/autonomous_explorer/autonomous_explorer/: agent_logger.py  config.py  consciousness.py  conversation_manager.py  dashboard.py  data_logger.py  exploration_memory.py  explorer_node.py  joystick_reader.py  llm_provider.py  model_config.py  nav2_bridge.py  semantic_map_publisher.py  tool_handlers.py  tool_registry.py  velocity_ramper.py  voice_io.py  world_knowledge.py  yolo_detector.py
src/autonomous_explorer/config/: ekf.yaml  explorer_params.yaml  foxglove_jeeves.json  foxglove_layout.json  model_config.yaml  nav2_explorer_params.yaml  slam_toolbox_params.yaml  twist_mux.yaml
src/autonomous_explorer/docs/: search_protocol_flow.md
src/autonomous_explorer/launch/: dashboard.launch.py  explorer.launch.py  hybrid_explorer.launch.py  jeeves_agent.launch.py
src/autonomous_explorer/scripts/: analytics_dashboard.py  dashboard.py  dataset_export.py  detect_devices.sh  install_nav2.sh  jeeves_knowledge.py  kill.sh  launch_explorer.sh
src/autonomous_explorer/test/: conftest.py  test_agent_logger.py  test_agent_pipeline.py  test_config.py  test_consciousness.py  test_conversation_manager.py  test_copyright.py  test_data_logger.py  test_exploration_memory.py  test_explorer_node.py  test_flake8.py  test_integration.py  test_joystick_reader.py  test_llm_provider.py  test_model_config.py  test_nav2_bridge.py  test_pep257.py  (+6 more)
(+91 files in other folders)
