<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_explorer</name>
  <version>1.0.0</version>
  <description>Autonomous exploration system using LLM vision as the robot brain</description>
  <maintainer email="vivek@example.com">vivek</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros_robot_controller_msgs</depend>

  <!-- Sensor fusion: IMU filter + EKF -->
  <exec_depend>imu_calib</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <!-- Optional: Foxglove remote visualization -->
  <exec_depend>foxglove_bridge</exec_depend>

  <!-- Optional: twist_mux priority cmd_vel multiplexer -->
  <exec_depend>twist_mux</exec_depend>

  <!-- Optional: Nav2 hybrid mode (install via install_nav2.sh) -->
  <exec_depend condition="$USE_NAV2">nav2_msgs</exec_depend>
  <exec_depend condition="$USE_NAV2">tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
